--- a/wikicurses.conf
+++ b/wikicurses.conf
@@ -1,5 +1,10 @@
 [general]
 default = Wikipedia
 
+[keymap]
+q = quit
+c = contents
+o = open
+
 [Wikipedia]
 url = http://en.wikipedia.org/w/api.php
