Allow going back and forward in history

--- a/wikicurses.conf
+++ b/wikicurses.conf
@@ -6,6 +6,10 @@ mouse = False
 q = quit
 c = contents
 o = open
+h = back
+l = forward
+left = back
+right = forward
 
 [Wikipedia]
 url = http://en.wikipedia.org/w/api.php
